syntax = "proto3";

package io.harness.gitsync;

import "google/protobuf/wrappers.proto";
import "io/harness/eventsframework/schemas/entity/entity_type.proto";

option java_multiple_files = true;

service HarnessToGitPushInfoService {
  rpc pushFromHarness(PushInfo) returns (PushResponse);
  rpc getConnectorInfo(FileInfo) returns (InfoForPush);
}

message PushInfo {
  string commit_id = 1;
  string file_path = 2;
  string fqn = 3;
}

message PushResponse {}

message FileInfo {
  string file_path = 1;
  string repo = 2;
  string branch = 3;
  io.harness.eventsframework.schemas.entity.EntityTypeProtoEnum entity_type = 4;
}

message InfoForPush {
  bytes connector = 1;
}
